# test-libtorch

./: CMakeLists.txt  README.md  example-app.cpp
